--- a/TEMPS/gezi/contact.html
+++ b/TEMPS/gezi/contact.html
@@ -70,6 +70,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
+								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html" class="nav-item nav-link">About</a></li>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Yurtiçi <span class="caret"></span></a>
