--- a/TEMPS/gezi/index.html
+++ b/TEMPS/gezi/index.html
@@ -18,7 +18,7 @@
 		<!-- Custom CSS -->
 		<link href="css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
 		<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
 		<link rel="stylesheet" href="css/style.css">
 		<script src="js/slider.js" type="text/javascript"></script>
@@ -81,6 +81,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav navbar-right">
+								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html" class="nav-item nav-link">About</a></li>
 								<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Yurtiçi <span class="caret"></span></a>
@@ -109,7 +110,7 @@
             <!-- Carousel Start -->
 				<div id="slider">
 					<a href="#"><img src="img/antalya.jpg" alt="Antalya" style="width:100%;margin:auto"/></a>
-					<a href="#"><img src="img/bartin.jpg"/ alt="Bartın" style="width:100%;margin:auto"></a>
+					<a href="#"><img src="img/bartin.jpg" alt="Bartın" style="width:100%;margin:auto"></a>
 					<a href="#"><img src="img/nevşehir.jpg" alt="Nevşehir" style="width:100%;margin:auto"/></a>
 				</div>
             <!-- Carousel End --> 
